--- a/SPADSBO/SADSUI/Resources/layout/Fragment_Drive.axml
+++ b/SPADSBO/SADSUI/Resources/layout/Fragment_Drive.axml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:gravity="center_horizontal"
     android:weightSum="100"
-    android:background="@android:color/background_dark">
+    android:background="#323335">
     <ImageView
         android:src="@drawable/car"
         android:layout_width="match_parent"
