--- a/SPADSBO/SADSUI/Resources/layout/Fragment_Report.axml
+++ b/SPADSBO/SADSUI/Resources/layout/Fragment_Report.axml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:gravity="center_horizontal"
     android:weightSum="100"
-    android:background="@android:color/background_dark">
+    android:background="#323335">
     <ImageView
         android:src="@drawable/report"
         android:layout_width="match_parent"
@@ -84,7 +84,7 @@
         android:id="@+id/get_address_button"
         android:background="@drawable/buttonsignupstyle" />
     <TextView
-        android:text="Location (when available)"
+        android:text="Getting Location...Please wait"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:layout_width="match_parent"
         android:gravity="center"
