--- a/SPADSBO/SADSUI/Resources/layout/Fragment_PersonalProfile.axml
+++ b/SPADSBO/SADSUI/Resources/layout/Fragment_PersonalProfile.axml
@@ -34,7 +34,7 @@
         android:layout_width="match_parent"
         android:gravity="center"
         android:layout_height="wrap_content"
-        android:id="@+id/textView2" />
+        android:id="@+id/txtPName" />
     <TextView
         android:text="Els"
         android:textAppearance="?android:attr/textAppearanceMedium"
@@ -42,7 +42,7 @@
         android:textColor="@android:color/background_light"
         android:gravity="center"
         android:layout_height="wrap_content"
-        android:id="@+id/textView3" />
+        android:id="@+id/txtPSurname" />
     <TextView
         android:text="Contact Details: 0716061609"
         android:textAppearance="?android:attr/textAppearanceMedium"
@@ -50,7 +50,7 @@
         android:gravity="center"
         android:textColor="@android:color/background_light"
         android:layout_height="wrap_content"
-        android:id="@+id/textView4" />
+        android:id="@+id/txtPContact" />
     <TextView
         android:text="Vehicle Model: Ford Ranger"
         android:textAppearance="?android:attr/textAppearanceMedium"
@@ -58,7 +58,7 @@
         android:textColor="@android:color/background_light"
         android:gravity="center"
         android:layout_height="wrap_content"
-        android:id="@+id/textView6" />
+        android:id="@+id/txtPModel" />
     <TextView
         android:text="REG number: GT13DGP"
         android:textAppearance="?android:attr/textAppearanceMedium"
@@ -66,7 +66,7 @@
         android:textColor="@android:color/background_light"
         android:gravity="center"
         android:layout_height="wrap_content"
-        android:id="@+id/textView7" />
+        android:id="@+id/txtPReg" />
     <Button
         android:text="Edit Profile"
         android:layout_width="match_parent"
