--- a/SPADSBO/SADSUI/Resources/layout/Fragment_PersonalProfile.axml
+++ b/SPADSBO/SADSUI/Resources/layout/Fragment_PersonalProfile.axml
@@ -21,7 +21,7 @@
         android:id="@+id/textView2"
         android:background="@android:color/holo_orange_dark" />
     <ImageView
-        android:src="@drawable/jl"
+        android:src="@drawable/profile_teaser"
         android:layout_width="match_parent"
         android:layout_height="153.0dp"
         android:id="@+id/imageView1" />
